# project-utils

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: generate.rs  lib.rs  scan.rs
tests/: resource.rs  scanning.rs
tests/project_stub/: more_test.rs  test.rs
