[package]
name = "gdnative-project-utils"
version = "0.1.0"
authors = ["The godot-rust developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4"
syn = { version = "1.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
pathdiff = "0.2"