[package]
name = "gdnative-project-utils"
version = "0.1.2"
authors = ["The godot-rust developers"]
edition = "2018"
description = "Utilies for working with godot-rust GDNative projects"
documentation = "https://docs.rs/crate/gdnative-project-utils"
repository = "https://github.com/godot-rust/project-utils"
license = "MIT"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["build_script"]
build_script = []

[dependencies]
ignore = "0.4"
syn = { version = "1.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
pathdiff = "0.2"
path-slash = "0.1"
dunce = "1.0.1"

[dev-dependencies]
tempfile = "3.1.0"